--- a/app/src/main/res/layout/activity_manage.xml
+++ b/app/src/main/res/layout/activity_manage.xml
@@ -16,8 +16,7 @@
             app:navigationIcon="@drawable/ic_left"
             app:title="Connect to Wallet"
             app:subtitleTextColor="#ff0000"
-            app:titleTextColor="@color/white"
-            />
+            app:titleTextColor="@color/white" />
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/adapterRv"
