--- a/app/src/main/res/layout/activity_reference.xml
+++ b/app/src/main/res/layout/activity_reference.xml
@@ -72,7 +72,9 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
 
+
             <LinearLayout
+
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="16dp"
@@ -120,6 +122,19 @@
                     android:textSize="16sp" />
 
                 <Button
+                    android:id="@+id/writeContract"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="32dp"
+                    android:layout_marginEnd="32dp"
+                    android:backgroundTint="@color/purple_500"
+                    android:gravity="center"
+                    android:text="Write Contract"
+                    android:textAllCaps="false"
+                    android:textColor="@color/white"
+                    android:textSize="16sp" />
+
+                <Button
                     android:id="@+id/signMessage"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
@@ -157,21 +172,22 @@
                     android:textAllCaps="false"
                     android:textColor="@color/white"
                     android:textSize="16sp" />
+
                 <Button
-                    android:id="@+id/writeContract"
+                    android:id="@+id/ethChainId"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="32dp"
                     android:layout_marginEnd="32dp"
                     android:backgroundTint="@color/purple_500"
                     android:gravity="center"
-                    android:text="Write Contract"
+                    android:text="Eth ChainId"
                     android:textAllCaps="false"
                     android:textColor="@color/white"
                     android:textSize="16sp" />
+
             </LinearLayout>
         </ScrollView>
-
     </RelativeLayout>
 
     <data>
