update sdk version to 2.x,Android targetSdk version to 34,use connectKit

--- a/app/src/main/res/menu/toolbar_action.xml
+++ b/app/src/main/res/menu/toolbar_action.xml
@@ -2,8 +2,11 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
-        android:id="@+id/manage"
-        android:icon="@drawable/ic_create_wallet"
-        android:title="Manage"
-        app:showAsAction="always" />
+        android:id="@+id/connect"
+        android:title="@string/connect"
+        app:showAsAction="collapseActionView" />
+    <item
+        android:id="@+id/connectKit"
+        android:title="@string/connectKit"
+        app:showAsAction="collapseActionView" />
 </menu>
